# personalised-demo-ai-agent

./: .dockerignore  .env.example  .gitignore  .prettierignore  DESIGN.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
services/agent_runtime/: README.md  __init__.py  pyproject.toml
services/agent_runtime/src/live_demo_agent_runtime/: app.py  config.py  dependencies.py  errors.py  health.py  logging_config.py  main.py  request_context.py
services/agent_runtime/src/live_demo_agent_runtime/agent_brain/: __init__.py  agent_decision.py  agent_output_schema.py  host_agent.py  host_agent_runner.py  json_repair.py  output_validator.py
services/agent_runtime/src/live_demo_agent_runtime/auth/: __init__.py  login_screen_detector.py
services/agent_runtime/src/live_demo_agent_runtime/context/: __init__.py  context_budget.py  context_packager.py  context_types.py  knowledge_context.py  realtime_context_builder.py  recipe_context.py  safety_context.py  screen_context.py  source_attribution.py  transcript_context.py
services/agent_runtime/src/live_demo_agent_runtime/db/: __init__.py  session.py
services/agent_runtime/src/live_demo_agent_runtime/events/: __init__.py  event_publisher.py  event_types.py  redis_event_publisher.py
services/agent_runtime/src/live_demo_agent_runtime/memory/: __init__.py  lead_insight_repository.py  memory_deduper.py  memory_scoring.py  memory_types.py  memory_update_handler.py  product_memory_repository.py
services/agent_runtime/src/live_demo_agent_runtime/metrics/: __init__.py  counters.py  latency.py
services/agent_runtime/src/live_demo_agent_runtime/observability/: __init__.py  metrics.py  pipeline_instrumentation.py  setup.py  tracing.py  voice_latency.py
services/agent_runtime/src/live_demo_agent_runtime/persona/: __init__.py  persona_scoring.py  persona_signals.py  persona_tracker.py  persona_types.py
services/agent_runtime/src/live_demo_agent_runtime/pipecat_adapters/: __init__.py  frame_types.py  interruption_adapter.py  pipeline_builder.py  stt_service_adapter.py  transport_factory.py  tts_service_adapter.py  vad_factory.py  (+1 more)
services/agent_runtime/tests/: __init__.py  agent_brain_helpers.py  helpers.py  test_agent_latency_budget.py  test_browser_tools.py  test_config.py  test_context_budget.py  test_context_builder.py  test_context_packager.py  test_demo_planner.py  test_fake_voice_session.py  test_health.py  test_host_agent_prompt.py  test_interruption_state.py  test_json_repair.py  test_latency_metrics.py  test_login_screen_detector.py  test_memory_deduper.py  test_memory_update_handler.py  test_no_hallucination_policy.py  test_output_validator.py  test_persona_tracker.py  test_phase_transitions.py  test_pipeline_builder.py  test_realtime_agent_processor.py  test_session_lifecycle.py  test_spoken_text_tracker.py  test_stt_provider_interface.py  test_tool_router.py  test_transcript_buffer.py  test_transcript_sink.py  test_transport_factory.py  test_tts_provider_interface.py  test_voice_session_manager.py
services/api/: README.md  __init__.py  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_phase_3_api_support.py  0003_phase_9_policy_audit.py  0004_phase_10_learner_graph.py  0005_phase_11_recipe_engine.py  0006_phase_12_session_orchestration.py  0007_phase_13_post_demo_intelligence.py  0008_phase_13_drop_legacy_post_demo_checks.py
services/api/src/live_demo_api/: app.py  config.py  dependencies.py  errors.py  export_openapi.py  health.py  logging_config.py  main.py  middleware.py  pagination.py  permissions.py  rbac_dependencies.py  security.py
services/api/tests/: conftest.py  helpers.py  test_agentic_turn_planner.py  test_alembic_migrations.py  test_app_factory.py  test_artifact_store.py  test_audit_logging.py  test_browser_agent_sync.py  test_db_models.py  test_demo_sessions_api.py  test_error_handlers.py  test_event_bus.py  test_guidance_api.py  test_health.py  test_health_api.py  test_join_config.py  test_lead_summaries_api.py  test_live_state_store.py  test_orchestration_events.py  test_orchestration_idempotency.py  test_orchestration_integration.py  test_orchestration_locks.py  test_orchestration_saga.py  test_pagination.py  test_post_demo_integration.py  test_post_demo_intelligence.py  test_prewarm_plan.py  test_prewarm_tasks.py  test_production_safety_gates.py  test_products_api.py  test_rbac.py  test_readiness.py  test_recipes_api.py  test_recovery_flow.py  test_redis_keys.py  test_resource_registry.py  test_security_redaction.py  test_session_orchestrator.py  test_session_shutdown.py  test_text_turn_browser_execution.py  (+1 more)
services/learner_worker/: README.md  pyproject.toml
services/learner_worker/src/live_demo_learner_worker/: app.py  config.py  dependencies.py  errors.py  health.py  logging_config.py  main.py
services/learner_worker/tests/: test_candidate_action_explorer.py  test_chunk_deduper.py  test_demo_graph_builder.py  test_element_matcher.py  test_embedding_writer.py  test_first_screen_summarizer.py  test_generated_route_builder.py  test_health.py  test_hybrid_retrieval.py  test_knowledge_chunker.py  test_learner_idempotency.py  test_learner_integration.py  test_learner_job_queue.py  test_learner_redaction.py  test_product_category_detector.py  test_product_learner_worker.py  test_retrieval.py  test_screen_matcher.py
services/learner_worker/tests/fixtures/: knowledge_text_long.md  product_guidance_founder.json  screen_dashboard.json  screen_login.json  screen_metric_form.json  screen_reports.json  screen_settings_risky.json  transcript_questions.json
services/tts_service/: README.md  pyproject.toml
services/tts_service/src/live_demo_tts_service/: health.py  main.py
services/tts_service/tests/: test_health.py
(+960 files in other folders)
