[project]
name = "live-demo-agent-workspace"
version = "0.1.0"
description = "Workspace for a live AI product demo agent platform."
requires-python = ">=3.12,<3.14"
dependencies = []

[tool.uv]
package = false

[tool.uv.sources]
live-demo-backend-common = { workspace = true }
live-demo-policies = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/backend_common",
  "packages/policies",
  "services/api",
  "services/agent_runtime",
  "services/learner_worker",
  "services/tts_service",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "testcontainers>=4.0.0",
  "types-redis>=4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
  "services/api/src",
  "services/agent_runtime/src",
  "services/learner_worker/src",
  "services/tts_service/src",
  "services/api/tests",
  "packages/backend_common/src",
  "packages/policies/generated/python",
  "packages/contracts/generated/python",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "ASYNC",
  "S",
  "SIM",
  "RUF",
]
ignore = [
  "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "services/api/src",
  "services/agent_runtime/src",
  "services/learner_worker/src",
  "services/tts_service/src",
  "packages/backend_common/src",
  "packages/policies/generated/python",
  "packages/contracts/generated/python",
]

[[tool.mypy.overrides]]
module = [
  "live_demo_contracts.*",
]
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
  "--import-mode=importlib",
  "-ra",
]
testpaths = [
  "services/api/tests",
  "services/agent_runtime/tests",
  "services/learner_worker/tests",
  "services/tts_service/tests",
  "packages/backend_common/src/live_demo_backend_common/tests",
  "tests",
]
pythonpath = [
  "services/api/src",
  "services/agent_runtime/src",
  "services/learner_worker/src",
  "services/tts_service/src",
  "packages/backend_common/src",
  "packages/policies/generated/python",
  "packages/contracts/generated/python",
]
asyncio_mode = "auto"
markers = [
  "integration: tests that require local Docker Compose services",
  "orchestration_integration: session orchestration integration tests with fake services",
  "post_demo_integration: post-demo intelligence integration tests with fake providers",
  "live: tests that call configured live AI providers",
]
