[project]
name = "live-demo-agent-runtime"
version = "0.1.0"
description = "Realtime agent runtime skeleton for the live demo agent platform."
requires-python = ">=3.12,<3.14"
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.0",
]

[project.scripts]
live-demo-agent-runtime = "live_demo_agent_runtime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

