[project]
name = "live-demo-learner-worker"
version = "0.1.0"
description = "Background learner worker skeleton for the live demo agent platform."
requires-python = ">=3.12,<3.14"
dependencies = [
  "live-demo-backend-common>=0.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
live-demo-learner-worker = "live_demo_learner_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
